# logistic-map-and-chaos

./: .gitignore  main.py  pyproject.toml
src/: main.py  main.tex
