[project]
name = "logistic-map-and-chaos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "manim>=0.19.0",
    "marimo>=0.18.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "pyzmq>=27.1.0",
]
